picker_source_files = files(
  'Main.vala',
  'Application.vala',
  'Models/Color.vala',
  'Models/ColorHistory.vala',
  'Widgets/Window.vala',
  'Widgets/ColorPreview.vala',
  'Widgets/OverlayWindow.vala',
  'Widgets/ColorPicker.vala',
  'Widgets/FormatArea.vala',
  'Widgets/HistoryButtons.vala',
  'Widgets/ColorButton.vala',
  'Services/Settings.vala',
  'Controllers/ColorController.vala'
)
