picker_source_files = files(
  'Main.vala',
  'Application.vala',
  'Models/Color.vala',
  'Models/Format.vala',
  'Models/ColorHistory.vala',
  'Widgets/Window.vala',
  'Widgets/ColorPreview.vala',
  'Widgets/FormatArea.vala',
  'Widgets/HistoryButtons.vala',
  'Widgets/ColorButton.vala',
  'Widgets/ColorPicker.vala',
  'Services/Settings.vala',
  'Controllers/ColorController.vala'
)
